--- a/app/module/partials/bottom-sheet.html
+++ b/app/module/partials/bottom-sheet.html
@@ -2,15 +2,15 @@
     <md-subheader>Actions</md-subheader>
     <md-list>
         <md-item><md-button aria-label="Share">
-            <i class="fa fa-share fa2x"></i>
+            <i class="fa fa-share"></i>
             <span class="md-inline-list-icon-label">Share</span>
         </md-button></md-item>
         <md-item><md-button aria-label="Upload">
-            <i class="fa fa-upload fa2x"></i>
+            <i class="fa fa-upload"></i>
             <span class="md-inline-list-icon-label">Upload</span>
         </md-button></md-item>
         <md-item><md-button aria-label="Copy">
-            <i class="fa fa-copy fa2x"></i>
+            <i class="fa fa-copy"></i>
             <span class="md-inline-list-icon-label">Copy</span>
         </md-button></md-item>
     </md-list>
